--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ body{
 .other-amount{
     margin-bottom: 70px;
     }
-h1  {
+.dntpln{
     font-family: 'Poppins', sans-serif;
-    font-size: 60px;
+    font-size: 50px;
     text-align: center;
     margin-bottom: 0px
     }
@@ -139,6 +139,114 @@ h1  {
         justify-content: center;
         margin-top: 10%;
     }
-    
+    .donation-im{
+        text-align: left;
+        font-weight: 700;
+        font-size: 20px;
+    }
+    .donation-depend{
+    padding: 30px;
+    justify-content: center;
+    text-align: left;
+    width: 50%;
+    font-size: 30px;
+    margin-left: 150px;
+    margin-top: 150px;
+    }
+    .donation-depend-2{
+        font-size: 30px;
+        padding: 45px;
+        width: 50%;
+    }
 
-    
+    .part-6{
+        display: flex;
+    }
+    .side-img img{
+        width: 80%;
+        margin-top: 35%;
+        margin-left: 5%;
+        padding: 5px,10px;
+    }
+    .side-img2 img{
+        width: 70%;
+        margin-top: 15%;
+        margin-left: 25%;
+        padding: 5px,10px;
+    }
+    .htc{
+    text-decoration: none;
+    color: white;
+    background-image: linear-gradient(tomato,tomato);
+    font-weight: 700;
+    text-justify: auto;
+    border-radius: 7px;
+    padding: 20px;
+    font-size: 15px;
+    margin: auto;
+    }
+
+    .htc2{
+        margin-top: 50px;
+    }
+    .part-7{
+        display: flex;
+    }
+    .finishing{
+        text-align: center;
+        padding: 10%;
+        font-size: 25px;
+        font-weight: 900;
+    }
+    .finishing2{
+    text-align: center;
+    margin-top: -13%;
+    }
+    .box{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 50vh;
+    }
+    .form-box{
+        padding: 10px;
+        border-radius: 5px;
+        background: white;
+        box-shadow: 10px 10px 15px #c7c4c4, -10px -10px 15px 3fff;
+    }
+    .from-box input {
+        font-size: 18px;
+        color: #000;
+        padding: 15px 10px;
+        border: none;
+        outline: none;
+        background: whitesmoke;
+    }
+    .form-box button {
+        color: white;
+        padding: 15px 20px;
+        font-size: 20px;
+        border: none;
+        border-radius: 5px;
+        background: tomato;
+        cursor: pointer;
+        transition: .3s;
+    }
+    .from-box button:hover{
+        background: tomato;
+    }
+    .last-one{
+        text-align: center;
+        background-color: #131426;
+        padding: 30px;
+        
+    }
+    .humble{
+        color: #EF4E4E ;
+        font-family: 'Dancing Script', cursive;
+        font-size: 30px;
+        margin-bottom: -10px;
+    }
+    .humble2{
+        font-size: 15px;
+    }
